--- a/index.html
+++ b/index.html
@@ -38,10 +38,9 @@
                             L'informatique s'intéresse à la mise en œuvre de méthodes scientifiques pour traiter l'information au moyen d'ordinateurs. Elle enrichit notamment les domaines suivants : Gestion des entreprises et les échanges financiers.</p>
                        </div>
                        <div class="left">
-                        <img src="c:\Users\diall\AppData\Local\Packages\5319275A.WhatsAppDesktop_cv1g1gvanyjgm\TempState\8FC687AA152E8199FE9E73304D407BCA\WhatsApp Image 2023-09-06 à 18.25.13.jpg" alt="" width="600px">
+                        <img src="c:\Users\diall\AppData\Local\Packages\5319275A.WhatsAppDesktop_cv1g1gvanyjgm\TempState\8FC687AA152E8199FE9E73304D407BCA\WhatsApp Image 2023-09-06 à 18.25.13.jpg" alt="" width="700px">
                        </div>
-                   </div><br>
-                   <div id="content">
+                   <br>
                     <div class="right">
                         <h1><u>Travail:</u></h1>
                         <p style="color: aliceblue;font-size: 22px;">Travailler en tant que développeur web est un atout de nos jours, car cela dispose de nombreux avantages. Qu'est ce qu'un développeur web ? Le développeur web réalise l'ensemble des fonctionnalités techniques d'un site ou d'une application web. Technicien ou ingénieur, il ou elle conçoit des sites sur mesure ou adapte des solutions techniques existantes en fonction du projet et de la demande du client. Est-ce difficile de devenir développeur web ?
@@ -49,14 +48,15 @@
                             Est-il difficile de devenir un développeur web ? Le développement web est l'un des métiers les plus simples à exercer, à condition de maîtriser la programmation. Tous les emplois ne conviennent pas à tout le monde, et il y aura toujours des personnes qui auront du mal à se faire une idée du code.</p>
                        </div>
                        <div class="left">
-                        <iframe width="660" height="415" src="https://www.youtube.com/embed/apVpWa15SeA?si=0Y7MFH0uMS3KYrXt" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                        <iframe width="700" height="400" src="https://www.youtube.com/embed/apVpWa15SeA?si=0Y7MFH0uMS3KYrXt" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                        </div>
-                   </div><br>
+                    </div>
+
+                   <br>
                         <div id="contact">
                            <div class="no">
                             <h1 class="var" style="color: rgb(143, 28, 89);"><em><u>CV:</u></em></h1>
                             <p><i>CLICK HERE:</i></p><a href="https://www.cv.fr/d/5O3vQI8fgN8QZSOoTzqS3Y/view"><h3><b><u>MY CV</u></b></h3></a>
-      
                            </div>
                         <div class="yes">
                             <h1 style="color: rgb(143, 28, 89);"><em><u>Contact:</u></em></h1>
